2012-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Applied patch kindly supplied by Rainer
	Hurling to support compilation on FreeBSD

2012-12-26  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: return invisibly from void functions
        * src/attributes.cpp: return invisibly from void functions

2012-12-20 Romain Francois <romain@r-enthusiasts.com>

        * NAMESPACE : remove C++ObjectS3 and C++ClassRepresentation classes
        * R/00_classes.R: remove unused S4 classes

2012-12-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.2
        * inst/NEWS.Rd: Release 0.10.2
        * inst/include/Rcpp/config.h: Release 0.10.2
        * debian/*: Similarly updated for new release to Debian

	* inst/doc/unitTests/Rcpp-unitTests.R: added one more variable so
	that unitTest vignette can be built against new sourceCpp based files

2012-12-15 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/exceptions.h: added exception_to_r_condition
        * exceptions.cpp: new implementation of forward_exception_to_r that
	directly calls stop rather than a function in Rcpp
        * R/exceptions.R: remove code rendered useless
        * src/Rcpp_init.c: less exports
        * src/api.cpp: less going back to the R side

2012-12-14 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/clamp.h: clamp was pretty wrong
        * unitTests/runit.sugar.R: new unit test for clamp
        * unitTests/cpp/sugar.cpp: new unit test for clamp

2012-12-12  JJ Allaire <jj@rstudio.org>

        * src/Attributes.R: always generate new dynlib file for rebuild=TRUE
        * src/attributes.cpp: set svn:eol-style to native; always generate
	new dynlib file for rebuild=TRUE; don't declare attributes constant
	strings extern

2012-12-12 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Symbol.h: c_str becomes const and added
	Symbol::operator==(const char* )
