@@ -1,3 +1,8 @@
+2012-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/Timer.cpp (Rcpp): Added defined() tests for more *BSD family
+	members as the build also failed with the FreeBSD Kernel on Debian
+
 2012-12-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Timer.cpp (Rcpp): Applied patch kindly supplied by Rainer
